// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the PayPal image 1`] = `
<div
  className="c-payment-methods__summary"
>
  <PaymentMethodHeader
    collapsed={true}
    title="test"
  />
  <div
    className="c-payment-methods__summary-information"
  >
    <Image
      className="c-payment-methods__image"
      src="/static/payments/pay-pal.svg"
    />
  </div>
</div>
`;

exports[`renders the shipping methods summary 1`] = `
<div
  className="c-payment-methods__summary"
>
  <PaymentMethodHeader
    collapsed={true}
    title="test"
  />
  <div
    className="c-payment-methods__summary-information"
  >
    <p>
      credit-card
    </p>
  </div>
</div>
`;
